first site build

--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -1,6 +1,9 @@
 ---
-title: "2018 01 27"
+title: "Philipians 3: ABBA, 27 Jan 2018"
 date: 2018-01-26T16:17:46+08:00
 draft: true
 ---
 
+# Introduction
+
+We've been going through Paul's Letter to the Philippians and today we are up to chapter three. 
