--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -1,8 +1,40 @@
 ---
-title: "Philippians 3: ABBA, 27 Jan 2018"
+title: "Philippians 3"
 date: 2018-01-27
 ---
 
 # Introduction
 
-We've been going through Paul's Letter to the Philippians and today we are up to chapter three. 
+We've been going through Paul's Letter to the Philippians and today we are up to chapter three. Paul wrote this letter from prison, and he seems to have doubts about getting out alive: *To me life means Christ and death means gain* [Phil 1.21](https://crosswire.org/study/parallelstudy.jsp?key=Philippians+1%3A21#cv).
+
+Some think he was in prison in Rome, others in Ephesus, and others in Caesarea. I think the Letter fits well with his imprisonment in Caesarea after being arrested in the temple at Jerusalem. You can read about the surrounding events in Acts chapters 21 to 26. The religious establishment in Israel, who the New Testament calls *The Jews*, was after Paul and wanted him dead. (The establishment *Jews* of the New Testament should not be confused with the Jews of today -- when you hear *Jews* in the New Testament, think of a powerful religious establishment that regards Christianity as a heresy.) Paul used to be one of the religious establishment until something strange happened to him on the road to Damascus. (See [Acts 9.3-9](https://crosswire.org/study/parallelstudy.jsp?key=Acts+9%3A3#cv).)
+
+# Finally
+
+What we now call *Phillipians chapter three* is just part a letter Paul wrote to his friends in a city called Phillipi. He says, *Finally, brothers, rejoice in the Lord.*
+
+When I hear *finally* in a sermon I am always glad because it means the preacher is about to finish. But, as is typical with Paul, he has a lot to say. He proceeds to write as much as he has already written. His *finally* means he is only half finished! The context, reading what has gone before, is that Epaphroditus had come all the way from Phillipi (a six week trip if Paul is in Caesarea) to bring some help from the people there. (Lydia, the first European to believe the Good News, was one of them.) This help might have been food, money, clothes, or just someone to keep Paul company. As it turns out, Epaphroditus got sick and nearly died. So Paul's *rejoice in the Lord* is in the context of someone coming close to death in Christ's service.
+
+# Dogs and slashers
+
+Now Paul lets rip. He says something like *I've told you before and I'll tell you again -- watch out for those dogs. Watch out for the slashers!* At this point we begin to blush because he is talking about circumcision, and the people who make circumcision a condition of entry into God's household. This seems very strange to us today, but at that time it made perfect sense. The Jewish religious establishment insisted that to become one of God's people it was necessary to be circumcised. In those days they would pray like this: *Thank you God that I was not born a dog or a woman.* A *dog* was a pagan -- someone they regarded as cursed for worshipping the wrong God or worshipping the wrong way or not bothering with God at all. Well, Paul turns the tables and calls the religious establishment *dogs*.
+
+Paul says, *We are the real circumcision, we who worship through God's Spirit, we whose glory comes from the Jesus the Messiah, without trusting in the flesh.* Elsewhere ([Col 2.11](https://crosswire.org/study/parallelstudy.jsp?key=Colossians+2%3A11#cv)) Paul talks about a true circumcision -- one in which Christ himself is the priest who separates a Christian from the *flesh*, that which works against the things of God. He is talking about being right with God by trusting in what Christ does, not some crude physical operation.
+
+# Paul knows what he's talking about
+
+When Paul talks about trusting in the flesh he is not just talking about the physical operation but the whole religious system that goes with it. If we want a contemporary example, *trusting in the flesh* is trusting any human religious system to make God happy with us. Take your pick: anything with *-ism* written after it will do, anything that says we can get where we need to go by following a set of man made rules rather than walking with God. That is trusting in the flesh.
+
+Getting back to the *dogs* and *slashers* Paul is bagging, he now goes on to say that he knows what he is talking about. Paul says he is as qualified as anyone else when it comes to being acceptable to God according to the established rules. He is:
+
+* born of the race of Israel (i.e. descended from Jacob)
+* of the tribe of Benjamin
+* a pure Hebrew (both parents Hebrew)
+* circumcised when eight days old (as the Law requires)
+* a Pharisee (i.e. a strictly observant Jew)
+* faultless with respect to the Law (no one could show he had broken a commandment)
+* zealous to the point of rounding up followers of the Way of Christ.
+
+Paul is one of them! He is an insider. But he knows something, and this is at the heart of the message he proclaims wherever he goes. The Law is useless when it comes to being right with God.
+
+How does he know? Because something strange happened to him on the road to Damascus. He was going there to round up Christians, followers of the Way of Christ. He had letters authorizing him to do so signed by the religious authorities of Jerusalem. As he was getting close a blinding light flashed and a voice said to him *Why are you persecuting me?* Paul, probably in shock, says *Who are you Lord?* Then he hears something that turned his world upside down. *I am Jesus, and you are persecuting me.* All that Paul trusted in, all that he was proud of, everything that made him someone, turned out to be wrong, utterly wrong. His religious establishment was actually God's enemy.
