--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -21,11 +21,11 @@ Now Paul lets rip. He says something like *I've told you before and I'll tell yo
 
 Paul says, *We are the real circumcision, we who worship through God's Spirit, we whose glory comes from the Jesus the Messiah, without trusting in the flesh.* Elsewhere ([Col 2.11](https://crosswire.org/study/parallelstudy.jsp?key=Colossians+2%3A11#cv)) Paul talks about a true circumcision -- one in which Christ himself is the priest who separates a Christian from the *flesh*, that which works against the things of God. He is talking about being right with God by trusting in what Christ does, not some crude physical operation.
 
-# Paul knows what he's talking about
+# Paul is well qualified
 
-When Paul talks about trusting in the flesh he is not just talking about the physical operation but the whole religious system that goes with it. If we want a contemporary example, *trusting in the flesh* is trusting any human religious system to make God happy with us. Take your pick: anything with *-ism* written after it will do, anything that says we can get where we need to go by following a set of man made rules rather than walking with God. That is trusting in the flesh.
+When Paul talks about trusting in the flesh he is not just talking about the physical operation but the whole religious system that goes with it. If we want a contemporary example, *trusting in the flesh* is trusting any human religious system to make God happy with us. Take your pick: anything with *-ism* written after it will do, anything that says we can get where we need to go by following a set of man made rules. That is trusting in the flesh.
 
-Getting back to the *dogs* and *slashers* Paul is bagging, he now goes on to say that he knows what he is talking about. Paul says he is as qualified as anyone else when it comes to being acceptable to God according to the established rules. He is:
+Getting back to the *dogs* and *slashers*, Paul now says that according to their rules he has unbeatable qualifications:
 
 * born of the race of Israel (i.e. descended from Jacob)
 * of the tribe of Benjamin
@@ -35,6 +35,10 @@ Getting back to the *dogs* and *slashers* Paul is bagging, he now goes on to say
 * faultless with respect to the Law (no one could show he had broken a commandment)
 * zealous to the point of rounding up followers of the Way of Christ.
 
-Paul is one of them! He is an insider. But he knows something, and this is at the heart of the message he proclaims wherever he goes. The Law is useless when it comes to being right with God.
+Paul is one of them! He is an insider. But he knows something, and this is at the heart of the message he proclaims wherever he goes. **The Law is useless when it comes to being right with God.**
 
-How does he know? Because something strange happened to him on the road to Damascus. He was going there to round up Christians, followers of the Way of Christ. He had letters authorizing him to do so signed by the religious authorities of Jerusalem. As he was getting close a blinding light flashed and a voice said to him *Why are you persecuting me?* Paul, probably in shock, says *Who are you Lord?* Then he hears something that turned his world upside down. *I am Jesus, and you are persecuting me.* All that Paul trusted in, all that he was proud of, everything that made him someone, turned out to be wrong, utterly wrong. His religious establishment was actually God's enemy.
+How does he know? Because something strange happened to him on the road to Damascus. He was going there to round up Christians, followers of the Way of Christ. He had letters authorizing him to do so signed by the religious authorities of Jerusalem. He was getting close to Damascus when a blinding light flashed and a voice said to him *Why are you persecuting me?* Paul, probably in shock, says *Who are you Lord?* (By saying *Lord*, he acknowledges that the One speaking is his (new) master.) Then Paul hears the words that turned his world upside down. *I am Jesus, and you are persecuting me.* All that Paul trusted in, all that he understood, everything that made him someone, all that he was proud of, turned out to be wrong, utterly wrong. What he thought were advantages were actually disadvantages. This is how Paul puts it:
+
+> Yet all such advantages I have reckoned as loss because of Christ. More than that, I reckon everything as loss because knowing Christ Jesus my Lord far outweighs everything else. It was for his sake that I let everything go; I count it all as worthless rubbish if only I can have Christ as my reward and be found one with him. I want to be found, not as one who has some legal form of righteousness of his own, but as one who believes in Christ and whom God, for that very reason, has made right with himself. All I want is to know Christ and the power which comes through his resurrection. I want to share his sufferings and become like him in his death; and, if I dare hope it, I want to be raised again from death. [Phil 3.7-11, Translator's New Testment](https://crosswire.org/study/parallelstudy.jsp?key=Philippians+3%3A7#cv)
+
+
