--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -1,6 +1,7 @@
 ---
 title: "Philippians 3"
 date: 2018-01-27
+bibliography: messages.yaml
 ---
 
 # Introduction
@@ -41,4 +42,6 @@ How does he know? Because something strange happened to him on the road to Damas
 
 > Yet all such advantages I have reckoned as loss because of Christ. More than that, I reckon everything as loss because knowing Christ Jesus my Lord far outweighs everything else. It was for his sake that I let everything go; I count it all as worthless rubbish if only I can have Christ as my reward and be found one with him. I want to be found, not as one who has some legal form of righteousness of his own, but as one who believes in Christ and whom God, for that very reason, has made right with himself. All I want is to know Christ and the power which comes through his resurrection. I want to share his sufferings and become like him in his death; and, if I dare hope it, I want to be raised again from death. [Phil 3.7-11, Translator's New Testment](https://crosswire.org/study/parallelstudy.jsp?key=Philippians+3%3A7#cv)
 
+Paul regards all of his former adavantages as *worthless rubbish*. The Greek word is σκυβαλα, which means *refuse, rubbish, dirt, dung* [@gingrich1965]. This is the stuff you throw to the street dogs. It is stinky and disgusting according to Paul's new way of seeing things.
 
+# References
