--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -1,7 +1,6 @@
 ---
 title: "Philippians 3"
 date: 2018-01-27
-bibliography: messages.yaml
 ---
 
 # Introduction
@@ -40,8 +39,28 @@ Paul is one of them! He is an insider. But he knows something, and this is at th
 
 How does he know? Because something strange happened to him on the road to Damascus. He was going there to round up Christians, followers of the Way of Christ. He had letters authorizing him to do so signed by the religious authorities of Jerusalem. He was getting close to Damascus when a blinding light flashed and a voice said to him *Why are you persecuting me?* Paul, probably in shock, says *Who are you Lord?* (By saying *Lord*, he acknowledges that the One speaking is his (new) master.) Then Paul hears the words that turned his world upside down. *I am Jesus, and you are persecuting me.* All that Paul trusted in, all that he understood, everything that made him someone, all that he was proud of, turned out to be wrong, utterly wrong. What he thought were advantages were actually disadvantages. This is how Paul puts it:
 
-> Yet all such advantages I have reckoned as loss because of Christ. More than that, I reckon everything as loss because knowing Christ Jesus my Lord far outweighs everything else. It was for his sake that I let everything go; I count it all as worthless rubbish if only I can have Christ as my reward and be found one with him. I want to be found, not as one who has some legal form of righteousness of his own, but as one who believes in Christ and whom God, for that very reason, has made right with himself. All I want is to know Christ and the power which comes through his resurrection. I want to share his sufferings and become like him in his death; and, if I dare hope it, I want to be raised again from death. [Phil 3.7-11, Translator's New Testment](https://crosswire.org/study/parallelstudy.jsp?key=Philippians+3%3A7#cv)
+> Yet all such advantages I have reckoned as loss because of Christ. More than that, I reckon everything as loss because knowing Christ Jesus my Lord far outweighs everything else. It was for his sake that I let everything go; I count it all as worthless rubbish if only I can have Christ as my reward and be found one with him. I want to be found, not as one who has some legal form of righteousness of his own, but as one who believes in Christ and whom God, for that very reason, has made right with himself. All I want is to know Christ and the power which comes through his resurrection. I want to share his sufferings and become like him in his death; and, if I dare hope it, I want to be raised again from death. Phil 3.7-11, Translator's New Testment
 
-Paul regards all of his former adavantages as *worthless rubbish*. The Greek word is σκυβαλα, which means *refuse, rubbish, dirt, dung* [@gingrich1965]. This is the stuff you throw to the street dogs. It is stinky and disgusting according to Paul's new way of seeing things.
+Here you have in a few sentences a summary of what takes up most of Paul's letters to the Galatians and Romans.  Being right according to the Law is useless when it comes to God. The only thing that counts is the rightness that comes from God, and that rightness is obtained by believing in Christ, by trusting him, by relying on him, by knowing him. Paul regards all of his former advantages as *worthless rubbish*. The Greek word is σκυβαλα, which means *refuse, rubbish, dirt, dung*. This is the stuff you throw to the street dogs. According to Paul's new way of seeing things, all of his former advantages are stinky and disgusting like pieces of poo and rotten rubbish.
 
-# References
+# I want to share his sufferings
+
+Paul says, *All I want is to know Christ and the power which comes through his resurrection.* So far so good. But the next part is a bit of a surprise: *I want to share his sufferings and become like him in his death.* In Damascus just after Paul saw the light, a disciple named Ananias had a vision in which Jesus told him to find Paul and pray for him so that Paul could recover his sight. Ananias said,
+
+> Lord, I have heard from many how much harm this man has done to your people in Jerusalem. And here he has authority from the chief priests to put in chains all who call upon your name. Acts 9.13-14
+
+But Jesus said to Ananias,
+
+> Go, for this man is my chosen instrument to carry my name to the Gentiles and kings and Israelites. I myself will show him all that he must suffer for the sake of my name. Acts 9.15-16
+
+Right from the start, Paul knew he was a chosen instrument to carry the name to Gentiles, kings, and Israelites. He also knew that he must suffer for the sake of the name. (The Hebrews revere God's name so much that they will never say it for fear of breaking the commandment that says *Do not take my name in vain*, perhaps better translated, *Do not make my name an empty sound*. The way they did this was by saying *ha shem* instead of God's real name. *Ha shem* means *the name*, and there is more than one place in Acts where the disciples say *the name* in place of the name of Jesus. This is a clear indication that the earliest disciples regarded Jesus as God.)
+
+Suffering doesn't seem like something good, but the Gospel has a definite message in this respect. If we seek to know Jesus, we must seek to become like him, even to the point of suffering and death. Jesus said that everyone who wants to follow him has to take up his cross. Taking up your cross meant one and only one thing in those times -- it meant suffering and death. So we can express what Jesus says like this: *Anyone who wants to follow me must endure suffering and death.* If this troubles you (like it troubles me), Paul offers a bit of encouragement. Firstly, he says that he does not regard himself as perfect (perhaps *as having finished* is a better translation here). But he presses on, as in a marathon, to get hold of the prize that Jesus has called him to, because this is why Jesus got hold of him.
+
+> I am not saying that all this is mine already or that I have been made perfect. But I am pressing on and trying to lay hold of it, because this is why Christ Jesus himself laid hold of me. Brothers, I know that I have not yet laid hold of it. Only one thing matters to me: I forget what lies behind and reach out to what lies ahead. I press on to the goal, to the prize of the heavenly life to which God calls me through Christ Jesus. This is how all of us who are mature Christians should think, but if you think differently about any point, God will enlighten you on it. We must start from where we are, but we must go on living by the standards we have achieved. Phil 3.13-16, Translator's New Testament
+
+
+
+
+
+
