--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -55,12 +55,19 @@ But Jesus said to Ananias,
 
 Right from the start, Paul knew he was a chosen instrument to carry the name to Gentiles, kings, and Israelites. He also knew that he must suffer for the sake of the name. (The Hebrews revere God's name so much that they will never say it for fear of breaking the commandment that says *Do not take my name in vain*, perhaps better translated, *Do not make my name an empty sound*. The way they did this was by saying *ha shem* instead of God's real name. *Ha shem* means *the name*, and there is more than one place in Acts where the disciples say *the name* in place of the name of Jesus. This is a clear indication that the earliest disciples regarded Jesus as God.)
 
-Suffering doesn't seem like something good, but the Gospel has a definite message in this respect. If we seek to know Jesus, we must seek to become like him, even to the point of suffering and death. Jesus said that everyone who wants to follow him has to take up his cross. Taking up your cross meant one and only one thing in those times -- it meant suffering and death. So we can express what Jesus says like this: *Anyone who wants to follow me must endure suffering and death.* If this troubles you (like it troubles me), Paul offers a bit of encouragement. Firstly, he says that he does not regard himself as perfect (perhaps *as having finished* is a better translation here). But he presses on, as in a marathon, to get hold of the prize that Jesus has called him to, because this is why Jesus got hold of him.
+Suffering doesn't seem good, but the Gospel has a definite message in this respect. If we seek to know Jesus, we must seek to become like him, even to the point of suffering and death. Jesus said that everyone who wants to follow him has to take up his cross. Taking up your cross meant one and only one thing in those times -- it meant suffering and death. So we can express what Jesus says like this: *Anyone who wants to follow me must endure suffering and death.* If this troubles you (like it troubles me), Paul offers a bit of encouragement. Firstly, he says that he does not regard himself as perfect (perhaps *as having finished* is a better translation here). But he presses on, as in a marathon, to get hold of the prize that Jesus has called him to, because this is why Jesus got hold of him.
 
 > I am not saying that all this is mine already or that I have been made perfect. But I am pressing on and trying to lay hold of it, because this is why Christ Jesus himself laid hold of me. Brothers, I know that I have not yet laid hold of it. Only one thing matters to me: I forget what lies behind and reach out to what lies ahead. I press on to the goal, to the prize of the heavenly life to which God calls me through Christ Jesus. This is how all of us who are mature Christians should think, but if you think differently about any point, God will enlighten you on it. We must start from where we are, but we must go on living by the standards we have achieved. Phil 3.13-16, Translator's New Testament
 
+Paul says that if we have trouble with any of this, God will enlighten us. That is a good place to start, Ask God about it. All of the apostles say, in one way or another, not to be surprised when we encounter suffering and death because we are seeking to be like Christ. Christ himself is our example, and he suffered and died.
 
+# Enemies of the cross
 
+The chapter ends with Pauls saying something that I think has connections with what he says in Romans chapters 9-11. It breaks Paul's heart, but many behave as enemies of the cross of Christ. This certainly applies to those who think that following a rule-based religion is the way to true life. People who think that following a set of rules is going to make God happy are wrong. As Paul says here, *Their God is their stomach, they boast about what they should be ashamed of, their minds are on earthly things.* Paul might be thinking of the religious establishment's insistence on eating the right things and circumcising their willies at this point. However, in today's world this applies to anyone who seeks a rightness with God apart from Christ and the pattern of his life. Paul warns us that enemies of the cross of Christ are doomed to destruction. (The Greek word here is απωλεια, *destruction, ruin, annihilation.*)
 
+I fear that I am an enemy of the cross of Christ. I don't want to suffer and die. I want and easy life. But in the end I am going to die. There is a better way, the way of Christ, a life of self sacrifice -- putting the interests of others before my own. This is a tough pill to swallow, but it is for our ultimate good. In Hebrews it says, *We are not among those who draw back and are lost. We have faith and God will save us.* It encourages me to know that Christ has taken hold of us, just like he took hold of Paul. Our lives may not be as spectacular, but walking with Christ involves suffering and death -- perhaps a daily death to our own interests is a good way to understand it. Knowing myself and my constant failures is a big discouragement. But knowing Christ and his qualities is a big encouragement. If I am going to have a share in the prize, it is not because of anything special about me but it is because Christ has taken hold of me. His character is the basis of my confidence, not my uprightness. His strength is my hope, not my weakness. His faithfulness is what I believe in, not my duplicity. His love is the power that will lead to eternal life, not my feeble affections.
 
+The thing to take away today is that there is only one thing worth pursuing, and that is to know Christ, to share his sufferings, to become like him in his death, and to be raised again from death.
+
+*Ex Deo nascimur, in Christo morimur, per Spiritum Sanctum reviviscimus.*
 
