--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -65,6 +65,8 @@ Paul says that if we have trouble with any of this, God will enlighten us. That 
 
 The chapter ends with Paul saying something that I think has connections with what he says in Romans chapters 9-11. It breaks Paul's heart, but many behave as enemies of the cross of Christ. This certainly applies to those who think that following a rule-based religion is the way to true life. People who think that following a set of rules is going to make God happy are wrong. As Paul says here, *Their God is their stomach, they boast about what they should be ashamed of, their minds are on earthly things.* Paul might be thinking of the religious establishment's insistence on eating the right things and circumcising their willies at this point. However, in today's world this applies to anyone who seeks a rightness with God apart from Christ and the pattern of his life. Paul warns us that enemies of the cross of Christ are doomed to destruction. (The Greek word here is απωλεια, *destruction, ruin, annihilation.*)
 
+# Conclusion
+
 I fear that I am an enemy of the cross of Christ. I don't want to suffer and die. I want and easy life. But in the end I am going to die anyway. There is a better way, the way of Christ, a life of self sacrifice -- putting the interests of others before my own. This is a tough pill to swallow, but it is for our ultimate good. Hebrews 10.39 says, *We are not among those who draw back and are lost. We have faith and God will save us.* It encourages me to know that Christ has taken hold of us, just like he took hold of Paul. Our lives may not be as spectacular as Paul's, but walking with Christ involves suffering and death -- perhaps a daily death to our own interests is a good way to understand it. Knowing myself and my constant failures is a big discouragement. But knowing Christ and his qualities is a big encouragement. If I am going to have a share in the prize, it is not because of anything special about me but it is because Christ has taken hold of me. His character is the basis of my confidence, not my uprightness. His strength is my hope, not my weakness. His faithfulness is what I believe in, not my duplicity. His love is the power that will lead to eternal life, not my feeble affections.
 
 The thing to take away today is that there is only one thing worth pursuing, and that is to know Christ, to share his sufferings, to become like him in his death, and to be raised again from death.
