--- a/content/posts/2018-04-07.md
+++ b/content/posts/2018-04-07.md
@@ -5,10 +5,10 @@ date: 2018-04-07
 
 # Introduction
 
-We are looking at what the Four Gospels have to say about what happened on Easter Sunday, and this week we are looking at Mark's account.
+We have been looking at what the Four Gospels say about what happened on Easter Sunday, and this week we are looking at Mark's account.
 
-# What kind of Gospel is Mark?
+# An eye witness view of Jesus
 
-Mark's Gospel gives you an eye witness view of the life of Jesus, from the time he chose his first four followers to when his followers ran away. Papias was a bishop who lived around 100 AD, and here's what he says about Mark's Gospel:
+I think that Mark gives you an eye witness view of Jesus from the time he chose his first followers to when they ran away. Around 130 AD, someone named Papias wrote about Mark. Papias was a bishop who lived in [Hierapolis](https://en.wikipedia.org/wiki/Hierapolis) in the Roman province of Asia Minor. At the time, Asia Minor was a major centre of Christianity. (Today it is Turkey.) Anyway, Papias said that Mark was Peter's interpreter, and that he wrote down accurately all that he recalled of what was said or done by Jesus. Papias also said that Mark had a single aim in view: "not to omit anything of what he heard, nor to state anything therein falsely" [@stevenson1987 49]
 
-> 
+# References
