--- a/content/posts/2018-04-07.md
+++ b/content/posts/2018-04-07.md
@@ -1,14 +1,67 @@
 ---
 title: "Mark 16.1-8"
 date: 2018-04-07
+bibliography: messages.yaml
 ---
 
 # Introduction
 
 We have been looking at what the Four Gospels say about what happened on Easter Sunday, and this week we are looking at Mark's account.
 
-# An eye witness view of Jesus
+Mark's Gospel appears to be an eye witness account of Jesus from the time he chose his first followers to when they ran away.
 
-I think that Mark gives you an eye witness view of Jesus from the time he chose his first followers to when they ran away. Around 130 AD, someone named Papias wrote about Mark. Papias was a bishop who lived in [Hierapolis](https://en.wikipedia.org/wiki/Hierapolis) in the Roman province of Asia Minor. At the time, Asia Minor was a major centre of Christianity. (Today it is Turkey.) Anyway, Papias said that Mark was Peter's interpreter, and that he wrote down accurately all that he recalled of what was said or done by Jesus. Papias also said that Mark had a single aim in view: "not to omit anything of what he heard, nor to state anything therein falsely" [@stevenson1987 49]
+Eusebius, who wrote a history of the church around 300 AD, tells us what someone named [Papias](https://en.wikipedia.org/wiki/Papias_of_Hierapolis) wrote about Mark. Papias lived from about 60 to 130 AD in a place called [Hierapolis](https://en.wikipedia.org/wiki/Hierapolis) in the Roman province of Asia Minor, which is now part of Turkey. This Papias was a bishop whose lifetime covered the period from when the Gospels were written to when Asia Minor had become a major centre of Christianity.
+
+According to Papias, Mark was Peter's interpreter who wrote down accurately all that he recalled of what was said or done by Jesus, though not in a systematic way. Papias then wrote that Mark had a single aim in view: "not to omit anything of what he heard, nor to state anything therein falsely." [@stevenson1987 49]
+
+What did Papias mean when he said that Mark did not write in a systematic way? Papias says the same thing twice, using two related words: [ταξει](http://www.perseus.tufts.edu/hopper/morph?l=tacei&la=greek#lexicon) and [συνταξιν](http://www.perseus.tufts.edu/hopper/morph?l=suntacin&la=greek#lexicon). Most understand this to mean that Mark did not put the events in time order. However, it is possible that Papias means that Mark did not write a systematic work, that he did not gather together things with common themes. (By contrast, the other Gospels do gather things together according to themes.) If this is the right way to understand Papias then it is entirely possible that Mark actually gives us Peter's account of what Jesus said and did as it happened. That is certainly the impression I get from the Gospel of Mark. It's like being there in the middle of the whirlwind tour that Jesus made from when he came out of the wilderness to when he was arrested and executed by the state.
+
+# Three women
+
+By the time we get to Mark's account of the resurrection, Peter has taken off. What Mark says about what happened early on that Sunday is really short, covering only the first eight verses of chapter sixteen. It still reads like an eye witness account but the witness is not Peter any more. Instead, there are three witnesses, all women. It is first light on the Sunday morning. The women are on their way to the tomb where Jesus' dead body was put after he was executed on the Friday. He had been put to death in the awful way that Romans got rid of people who were not Roman citizens -- crucifixion.
+
+Mark says the three women were Mary of Magdala, Mary of James, and Salome. Waiting through the Sabbath (being observant Jews), they went and bought aromatic herbs and spices because they intended to prepare Jesus' body, something they had not been able to do before because of the manner of his death and the Sabbath. They must have gone to the market place before the sun was up or even done some secret trading on the Sabbath. (I wonder if the Greeks in Jerusalem would sell you something on the Sabbath?)
+
+Many would regard what they planned to do as a waste of time. What's the point of preparing someone's body after they're dead? To make things worse, the body belongs to someone the state had executed. It would be like going to the trouble of preparing someone's body after they had been hung, shot by a firing squad, given the electric chair, or a lethal injection. But each of those women loved Jesus, each for her own reasons. They wanted to do something, even if it was just giving his dead body a dignified final preparation.
+
+The first woman mentioned is Mary the Magdalene. Luke tells us that Jesus drove seven demons out of her. She was one of the women who travelled from Galilee with Jesus, following and serving him. The second is Mary of James. Looking back to [Mark 15.40](https://crosswire.org/study/parallelstudy.jsp?key=Mark+15%3A40#cv) we see that this is Mary the mother of little James and Joses (Joses = Joseph). This could be a round about way of saying that she is Mary the mother of Jesus. (See [Mark 6.3](https://crosswire.org/study/parallelstudy.jsp?key=Mark+6%3A3#cv), where they say of Jesus, "Isn't this the carpenter, the son of Mary and brother of James, Joses, Judas, and Simon? And aren't his sisters here with us?") The last of the three is Salome, and we know next to nothing about her. Maybe she was one of Jesus' sisters? Then, as now, only the closest people would be going there to do what they could for the one they loved.
+
+# What about the stone?
+
+They had a common bond of grief. Their hearts were pierced with pain. It is early morning, just as the suns first rays begin to light the world. For those women, it is a horrible world that has just killed the one they hoped would make things different.
+
+Now they have a big problem. "Who's going to roll away the stone?" They are women and there's a big stone covering the entrance to the tomb where Joseph of Arimathea put Jesus' body after getting permission from the Roman governor, Pilate. As far as they know, they will get to the tomb and look stupid, being physically unable to roll away the stone that Mark describes as "exceedingly great." This would just add to the humiliation they already felt, yet another assault on their already crushed hearts.
+
+# Astonished
+
+When they looked up, they observed (as witnesses do) that the stone was already rolled back! Now what did they feel? Surprise, confusion, probably fear and a bit of panic. Who moved the stone? Was it the authorities? Would they still be there? Would they beat them up or do even worse? I would be running the other way by now, but they went in and there was a youth sitting on the right who had been clothed in a white robe.
+
+How would you react if this happened to you? They did not find what they might have expected -- a potentially violent man or men. No, there is a young person who had been clothed in a white robe.
+
+Mark tells us their reaction: "And they were astonished." (Let's all do an astonished face.) Or, another possible shade of meaning for the word is that they were alarmed. (Let's all do an alarmed face.) This is what I mean by Mark giving you the sense of being right there.
+
+Now the youth says to them something even more astonishing:
+
+> Don't be astonished. You seek Jesus the Nazarene, the one who was crucified. He has risen. He is not here. Look, there's the place where they put him.
+
+What was going through their minds? What kind of news is this? Risen? What do you mean? He is dead. We saw him die. Instead of an explanation, the young person tells them what to do:
+
+> You go and tell his followers -- and Peter -- that he goes before you to Galilee. There you will see him, just as he told you.
+
+# Shaking and ecstasy
+
+What those women did next is not what they were told to do. I suppose if they were in a calm state of mind they might have gone straight to the disciples and given them the message. Instead they ran from the tomb with τρομοσ and εκστασισ, shaking and ecstasy. They were experiencing the physical reactions that go with fear and overwhelming joy, both at the same time. And no wonder. They had just seen the most astounding thing that any humans have ever witnessed. Who did God choose to receive the most important piece of news ever? Three women who were at the time completely insignificant to the world. Who gave them the news? An unidentified young person.
+
+I wonder whether that young person is the one who ran into the night, leaving his night gown behind, when Jesus was arrested? See [Mark 14.51-52](https://crosswire.org/study/parallelstudy.jsp?key=Mark+14%3A51#cv). The same word for "youth" or "young person" (νεανισκοσ) is used in both places. The same word for "clothed" (περιβεβλημενοσ) is also used in both places. In the first place the young man is clothed in a night gown and in the second place he is clothed in a white robe. If it is the same person then he has spent the last three nights and two days naked, hiding among the tombs, scared, ashamed, fearful, tired, hungry, and wondering how to get out of his predicament. Can you imagine what a state he would have been in?
+
+The long time interval makes this theory a long shot (unlikely). Most equate the young man with one of the angels mentioned in the other Gospels. However, if it is the same person, we see the resurrected Jesus getting him out of his terrible predicament, clothing him with a white robe, and entrusting him with the instructions for his followers. Some people think that this young person is, in fact, the same one who wrote this Gospel -- Mark himself.
+
+# And Peter
+
+Once the women got over their shock they did go and tell the others. One person who they told was Peter. The young person had mentioned Peter by name, saying that the women were to tell him, too. Why? John's Gospel tells us why. Jesus was going to restore Peter. Even though Peter failed, denying that he knew Jesus, Jesus was going to give him the job of looking after the infant Christian community. (See [John 21.15-19](https://crosswire.org/study/parallelstudy.jsp?key=John+21%3A15#cv).)
+
+# Conclusion
+
+What can we say about Mark's account of the resurrection? It has the feel of an eye witness account. It says things that you wouldn't write if you were making it all up. Why would you choose three unknown women? Why would you choose an unknown man, and a young, harmless one? Why would you say that the women ran away scared and ecstatic at the same time? Why would you say that they didn't say anything to anyone because they were afraid? The answer is, you wouldn't, unless it really happened that way.
 
 # References
