--- a/content/posts/2018-04-07.md
+++ b/content/posts/2018-04-07.md
@@ -48,9 +48,9 @@ What was going through their minds? What kind of news is this? Risen? What do yo
 
 > You go and tell his followers -- and Peter -- that he goes before you to Galilee. There you will see him, just as he told you.
 
-# Shaking and ecstasy
-
 What those women did next is not what they were told to do. I suppose if they were in a calm state of mind they might have gone straight to the disciples and given them the message. Instead they ran from the tomb with τρομοσ and εκστασισ, shaking and ecstasy. They were experiencing the physical reactions that go with fear and overwhelming joy, both at the same time. And no wonder. They had just seen the most astounding thing that any humans have ever witnessed. Who did God choose to receive the most important piece of news ever? Three women who were at the time completely insignificant to the world. Who gave them the news? An unidentified young person.
+
+# The young person
 
 I wonder whether that young person is the one who ran into the night, leaving his night gown behind, when Jesus was arrested? See [Mark 14.51-52](https://crosswire.org/study/parallelstudy.jsp?key=Mark+14%3A51#cv). The same word for "youth" or "young person" (νεανισκοσ) is used in both places. The same word for "clothed" (περιβεβλημενοσ) is also used in both places. In the first place the young man is clothed in a night gown and in the second place he is clothed in a white robe. If it is the same person then he has spent the last three nights and two days naked, hiding among the tombs, scared, ashamed, fearful, tired, hungry, and wondering how to get out of his predicament. Can you imagine what a state he would have been in?
 
