--- a/content/posts/2018-04-07.md
+++ b/content/posts/2018-04-07.md
@@ -12,7 +12,7 @@ Mark's Gospel appears to be an eye witness account of Jesus from the time he cho
 
 Eusebius, who wrote a history of the church around 300 AD, tells us what someone named [Papias](https://en.wikipedia.org/wiki/Papias_of_Hierapolis) wrote about Mark. Papias lived from about 60 to 130 AD in a place called [Hierapolis](https://en.wikipedia.org/wiki/Hierapolis) in the Roman province of Asia Minor, which is now part of Turkey. This Papias was a bishop whose lifetime covered the period from when the Gospels were written to when Asia Minor had become a major centre of Christianity.
 
-According to Papias, Mark was Peter's interpreter who wrote down accurately all that he recalled of what was said or done by Jesus, though not in a systematic way. Papias then wrote that Mark had a single aim in view: "not to omit anything of what he heard, nor to state anything therein falsely." [@stevenson1987 49]
+According to Papias, Mark was Peter's interpreter who wrote down accurately all that he recalled of what was said or done by Jesus, though not in a systematic way. Papias then wrote that Mark had a single aim in view: "not to omit anything of what he heard, nor to state anything therein falsely." <!--[@stevenson1987 49]-->
 
 What did Papias mean when he said that Mark did not write in a systematic way? Papias says the same thing twice, using two related words: [ταξει](http://www.perseus.tufts.edu/hopper/morph?l=tacei&la=greek#lexicon) and [συνταξιν](http://www.perseus.tufts.edu/hopper/morph?l=suntacin&la=greek#lexicon). Most understand this to mean that Mark did not put the events in time order. However, it is possible that Papias means that Mark did not write a systematic work, that he did not gather together things with common themes. (By contrast, the other Gospels do gather things together according to themes.) If this is the right way to understand Papias then it is entirely possible that Mark actually gives us Peter's account of what Jesus said and did as it happened. That is certainly the impression I get from the Gospel of Mark. It's like being there in the middle of the whirlwind tour that Jesus made from when he came out of the wilderness to when he was arrested and executed by the state.
 
@@ -64,4 +64,4 @@ Once the women got over their shock they did go and tell the others. One person 
 
 What can we say about Mark's account of the resurrection? It has the feel of an eye witness account. It says things that you wouldn't write if you were making it all up. Why would you choose three unknown women? Why would you choose an unknown man, and a young, harmless one? Why would you say that the women ran away scared and ecstatic at the same time? Why would you say that they didn't say anything to anyone because they were afraid? The answer is, you wouldn't, unless it really happened that way.
 
-# References
+<!--# References-->
