--- a/content/posts/2018-06-09.md
+++ b/content/posts/2018-06-09.md
@@ -6,7 +6,19 @@ bibliography: messages.yaml
 
 # Introduction
 
-...
+The First Letter of Peter is one of the seven General Letters -- a group of letters by people named James, Peter, John, and Jude. These letters are called "General" because they are addressed to general groups of people instead of particular ones. Here's an example of a general letter:
+
+"To Everyone living in Australia, please have a nice day."
+
+Here's an example of a particular letter:
+
+"To Everyone in East Vic Park Baptist Church, please have a nice night."
+
+Two of the seven General Letters are attributed to Peter, one of the first people Jesus called to follow him. Peter had no idea what it would mean to follow Jesus when he was first called. He was a fisherman, but would become a pillar in a movement that ended up shaking the world. Tonight we will be looking at the first chapter of the First Letter of Peter.
+
+# Greetings
+
+The Letter starts off just like every other letter from those times: it begins with the person responsible for the letter and the person or people it is being sent to. They didn't have the kind of postal systems we have today, where you can write a letter to me at my home address, saying what unit, what street number, what street, what suburb, what city, what state, and which country. Instead you would say something like "To Eliane whose father is a policeman and lives next to the church which is next to the shops in Fatima, which is about a day's walk towards the rising sun from Belo."
 
 # Conclusion
 
