--- a/content/posts/2018-06-09.md
+++ b/content/posts/2018-06-09.md
@@ -1,27 +1,61 @@
 ---
-title: "1 Peter 1"
+title: "1 Peter 1.1"
 date: 2018-06-09
 bibliography: messages.yaml
 ---
 
 # Introduction
 
-The First Letter of Peter is one of the seven General Letters -- a group of letters by people named James, Peter, John, and Jude. These letters are called "General" because they are addressed to general groups of people instead of particular ones. Here's an example of a general letter:
+The First Letter of Peter is one of the seven General Letters in the New Testament: James; First and Second Peter; First, Second, and Third John; and Jude. These letters are called "General" because they are addressed to general groups of people instead of particular ones. Here's an example of a general letter:
 
-"To Everyone living in Australia, please have a nice day."
+"To Everyone living in Australia, please be kind to refugees."
 
 Here's an example of a particular letter:
 
-"To Everyone in East Vic Park Baptist Church, please have a nice night."
+"To Everyone in East Vic Park Baptist Church, please remember to unplug the appliances."
 
-Two of the seven General Letters are attributed to Peter, one of the first people Jesus called to follow him. Peter had no idea what it would mean to follow Jesus when he was first called. He was a fisherman, but would become a pillar in a movement that ended up shaking the world. Tonight we will be looking at the first chapter of the First Letter of Peter.
+Two of the seven General Letters are named after Peter, who was one of the first people to follow Jesus. Peter had no idea what it would mean when Jesus said "Follow me". He was a fisherman, but would become a pillar in a movement that has shaken the world. Tonight we will be looking at the first verse of the first chapter of the First Letter of Peter.
 
-# Greetings
+# Who is it from?
 
-The Letter starts off just like every other letter from those times: it begins with the person responsible for the letter and the person or people it is being sent to. They didn't have the kind of postal systems we have today, where you can write a letter to me at my home address, saying what unit, what street number, what street, what suburb, what city, what state, and which country. Instead you would say something like "To Eliane whose father is a policeman and lives next to the church which is next to the shops in Fatima, which is about a day's walk towards the rising sun from Belo."
+The Letter starts off just like every other letter from those times: it says who the letter is from: "Peter, apostle of Jesus Christ." What does that mean? We know who Peter is, we know who Jesus is, but what is an apostle? Anyone sent out by Jesus to do something is an apostle. So this is a letter from Peter the apostle -- someone who had been sent out by Jesus with a job.
+
+Jesus gave the first Christians a job -- Go and make disciples of all nations. In Galatians, Paul says:
+
+> We wanted the truth of the Good News to be safe with you for ever. Those who were regarded as of some importance -- whether they really were or not does not matter to me, for God does not judge by appearances -- had nothing further to suggest to me. On the contrary they saw that I had been entrusted with the Good News for the Gentiles, as Peter had been entrusted with it for the Jews. For God who enabled Peter to be an apostle to the Jews also enabled me to be an apostle to the Gentiles. So James, Cephas, and John, who are regarded as the pillars of the church, recognized the privilege which God had given me and shook hands with Barnabas and me as a pledge of partnership. We were to go to the Gentiles and they to the Jews. [Galatians 2.5-9]
+
+It looks like Jesus gave Peter the job of taking the Good News to the Jews. Peter's real name was Simon, but Jesus called him "rock". The Greek word for rock is πετρα, which is where the name Peter comes from. Cephas is the Aramaic word for rock. (Aramaic is like Hebrew, and is what the Jews in Israel spoke at the time.) So Peter was called Simon by his family, Peter by Greek-speaking Christians, and Cephas by Aramaic-speaking Christians.
+
+Why did Jesus call Simon "rock"? One time Jesus asked his disciples who people thought he was:
+
+> And they said, “Some say John the Baptist, others, Elijah, and others, Jeremiah, or one of the prophets.” He said to them, “But who do you say that I am?” Simon Peter answered, “You are the Christ, the Son of the living God.” And Jesus said to him, “Blessed are you, Simon Barjona, because flesh and blood did not reveal this to you, but My Father who is in heaven. I also say to you that you are Peter, and upon this rock I will build My church; and the gates of Hades will not overpower it.” [Matt 16.16-18]
+
+So the rock of Peter is what God showed him, that Jesus is the Son of God, the Christ, the Messiah. (If you don't already know, "Christ" is Greek and "Messiah" is Aramaic. They mean the same thing, which is "annointed". To annoint someone is to pour oil upon someone. Ancient rulers were annointed, not crowned. To say Jesus is the Christ or Messiah is to say that he is the one who God has made the ruler of all things.)
+
+# Who is it for?
+
+The next thing that people would write in letters back then is who the letter is for. They didn't have the same kind of postal system as us. Now you can write a letter and get it to someone by writing the street number, street, suburb, city, state, and country on the envelope. Then you would have to write something like "To Elias, who is Eliane's brother, whose father was a policeman, who lives next to a church which is next to some shops in Fatima, which is about a day's walk East of Belo."
+
+The First Letter of Peter is not written to an individual. It is a general letter, written to a big group of people: "to the chosen exiles scattered through Pontus, Galatia, Cappadocia, Asia, and Bithynia."
+
+Pontus, Galatia, Cappadocia, Asia, and Bithynia, were places in the Roman province of Asia Minor. The same region is now called Turkey. The common language they spoke there was Greek (a bit like English is the common language of Australia, though other languages are spoken as well). It became a major centre of early Christianity through people like Peter, who did what Jesus gave him to do.
+
+![Asia Minor [source: Wikipedia]](/images/Asia-Minor.jpg "Asia Minor [source: Wikipedia]")
+
+Peter is writing to people who are living away from their native country. He calls them "chosen," which fits well with the idea that he is writing to Jewish people, who are called the chosen people. These are Jewish people who believe that Jesus is the Messiah.
+
+Peter also calls them "exiles." You all know what this is about. In a sense, many of you are exiles. You live here but you miss your first home and your people. The new place is OK but a part of your heart is left in the place you used to live.
+
+You might not have thought about it before, but you have something in common with Peter. He was an exile too. If you look in Acts chapter 12 you will see that he was a wanted man, an escaped prisoner. He could not stay in Israel any more because Herod wanted him dead. So he had to go a long way away from the place he grew up. He was married so he had to uproot his family and travel to a far off land. (It was about 900 km away. It would have taken a month or two to walk that far, which is probably what Peter and his family had to do.) 
+
+Having to get out of Israel means he had to change his job description. Instead of being apostle to the Jews, he became apostle to the Greek-speaking Jews. (James, brother of Jesus, was left with the job of apostle to the Aramaic-speaking Jews, who lived in Israel.) Asia Minor was a strategic place for the Christian mission. A lot of Greek-speaking Jews lived there. To give an example, Paul and his parents were Greek-speaking Jews whose family home was in Tarsus, which is in Asia Minor. They were the kind of people Peter now wanted to get the Good News to -- they were Jews, they spoke Greek, and they lived in Asia Minor. (No doubt Peter also took the Good News to any Gentiles (i.e. non-Jews) who would listen.)
+
+Here's an interesting thing: if Peter was in Asia Minor then it might explain a puzzling part of Acts, where the Spirit of Jesus did not allow Paul to go into Bithynia (see Acts 16.7). Does this mean Jesus doesn't care about these people? Or does it mean that Jesus already has Peter there? All of a sudden, we get a glimpse of Jesus Christ the strategist, directing his mission from heaven.
+
+There's another thing many of you have in common with Peter. He had to work in a foreign language. He grew up speaking Aramaic, but the common language of Asia Minor was Greek. It's just like someone who has English as a second language. People think you're stupid because you get English grammar wrong. Peter had the same problem. He could speak Greek, but it wasn't perfect. So he used people who were better at Greek to help him speak and write in Greek. If Peter was speaking to a group, he might ask someone like Mark to translate. (At the end of the letter, Peter calls Mark "my son." There is no reason Mark could not be Peter's actual son. If Mark actually was Peter's son, it throws a different light on the dispute that Paul and Barnabus had over Mark, recorded in Acts 15.36-39.) Getting back to Peter, if he was writing a letter to all of the Greek-speaking Jews in Asia Minor, he might ask someone like Silvanus to help him put what he wants to say into good Greek. (At the end of the letter, Peter says "I have written this brief letter to you with the help of Silvanus." This Silvanus is an interesting person. We know that he travelled with Paul, and we know from this letter that he helped Peter as well. Based on similarities between this letter and Hebrews, I think that Silvanus might be the one who wrote Hebrews.)
 
 # Conclusion
 
-...
+We could learn something from Peter: Jesus gives every generation the job of taking the Good News to a world that needs it but doesn't know it. Jesus makes his own choices about who is given what job and where he sends them to do it. Sometimes following Jesus means uprooting our family and going to a far off place where they speak a strange language and have funny habits. Sometimes we are sent to do a job that we don't think we are well equipped to do. Sometimes Christ's Spirit directs us to do something that doesn't seem to make a lot of sense at the time. However, there is always a blessing in following the Spirit. Jesus is the one in command. He is the one who gives us a job to do -- whether great or small. He is the one who sends us this way or that in order to do it. Our part is to do what he gives us: to take the Good News to the nations he has sent us to. Jesus is happy for us to be part of his mission. Doing our part might mean getting help with things we are not so good at ourselves. If you need help taking the Good News to the world, you can be sure that Jesus will supply helpers when you need them. Remember that Jesus says, "If you ask for anything in my name, I will do it."
 
 <!--# References-->
