--- a/content/posts/2018-06-05.md
+++ b/content/posts/2018-06-05.md
@@ -6,7 +6,7 @@ bibliography: messages.yaml
 
 # Jesus announces his mission
 
-The Gospel of Luke tells us that Jesus's public work began after his baptism by John the Baptist in the Jordan River. People thought that John the Baptist might be the Messiah, the promised saviour of Israel. So John told them this:[1]
+The Gospel of Luke tells us that Jesus's public work began after his baptism by John the Baptist in the Jordan River. People thought that John the Baptist might be the Messiah, the promised saviour of Israel. So John told them this:
 
 > I baptize by immersing you in water. However, someone who is stronger than I am is coming; I am not worthy even to release the straps on his sandals. He will baptize you by immersing you in the Holy Spirit and in fire. [Luke 3.16. Quotations are from Richard K. Moore's new translation, *Under the Southern Cross: The New Testament in Australian English*, abbreviated USC from this point forwards.]
 
