--- a/content/posts/2018-06-05.md
+++ b/content/posts/2018-06-05.md
@@ -86,14 +86,13 @@ But we are not finished yet. There is a constant battle. The forces of darkness 
 
 Brothers and sisters, make it your aim to capture Christ's vision, to complete his mission. We have achieved much in the past but have much left to do. Working together through Christ's life-giving Spirit, we can help to realise Micah's prophecy:
 
-<pre>
-And it will come about in the last days
+> And it will come about in the last days
 That the mountain of the house of the LORD
 Will be established as the chief of the mountains.
 It will be raised above the hills,
 And the peoples will stream to it.
 
-Many nations will come and say,
+> Many nations will come and say,
 “Come and let us go up to the mountain of the LORD
 And to the house of the God of Jacob,
 That He may teach us about His ways
@@ -101,32 +100,31 @@ And that we may walk in His paths.”
 For from Zion will go forth the law,
 Even the word of the LORD from Jerusalem.
 
-And He will judge between many peoples
+> And He will judge between many peoples
 And render decisions for mighty, distant nations.
 Then they will hammer their swords into plowshares
 And their spears into pruning hooks;
 Nation will not lift up sword against nation,
 And never again will they train for war.
 
-Each of them will sit under his vine
+> Each of them will sit under his vine
 And under his fig tree,
 With no one to make them afraid,
 For the mouth of the LORD of hosts has spoken.
 
-Though all the peoples walk
+> Though all the peoples walk
 Each in the name of his god,
 As for us, we will walk
 In the name of the LORD our God forever and ever.
 
-“In that day,” declares the LORD,
+> “In that day,” declares the LORD,
 “I will assemble the lame
 And gather the outcasts,
 Even those whom I have afflicted.
 
-“I will make the lame a remnant
+> “I will make the lame a remnant
 And the outcasts a strong nation,
 And the LORD will reign over them in Mount Zion
 From now on and forever.”
-</pre>
 
 [Micah 4.1-7, NASB]
