--- a/content/posts/2018-06-05.md
+++ b/content/posts/2018-06-05.md
@@ -82,7 +82,7 @@ I venture to say that women in the western world owe Christ their opportunity to
 
 The list of practical benefits to society directly attributable to Christ's Gospel goes on and on. I haven't mentioned public education, a fair legal system, fair and open government without corruption, the Sabbath rest and other holidays, hygiene, fair distribution of wealth, or insurance systems (the many providing for the unfortunate few), to name only some. Many books could be filled with the story of the small seed of Christianity which has grown into a tree which shelters many. Christianity stands behind just about every benevolent public institution which has been created.
 
-But we are not finished yet. There is a constant battle. The forces of darkness want to reverse these gains. They want to send us back to a time of oppression, where life is short and miserable, where a few rich, powerful, and ruthless men ride on the bent backs of many poor. We have yet to do away with economic bondage where people have to sign away their lives to buy a piece of land, land which belongs to God. Could Christ's mission include restoration of land to the people? Many would call this a preposterous idea. However, it is a very clear implication if Christ's acceptable year of the Lord does encompass the Jubilee set out in Leviticus chapter 25.
+But we are not finished yet. There is a constant battle. The forces of darkness want to reverse these gains. They want to send us back to a time of oppression, where life is short and miserable, where a few rich, powerful, and ruthless people ride on the bent backs of many poor. We have yet to do away with economic bondage where people have to sign away their lives to buy a piece of land, land which belongs to God. Could Christ's mission include restoration of land to the people? Many would call this a preposterous idea. However, it is a very clear implication if Christ's acceptable year of the Lord does encompass the Jubilee set out in Leviticus chapter 25.
 
 Brothers and sisters, make it your aim to capture Christ's vision, to complete his mission. We have achieved much in the past but have much left to do. Working together through Christ's life-giving Spirit, we can help to realise Micah's prophecy:
 
