--- a/content/posts/2018-06-09.md
+++ b/content/posts/2018-06-09.md
@@ -8,11 +8,11 @@ bibliography: messages.yaml
 
 The First Letter of Peter is one of the seven General Letters in the New Testament: James; First and Second Peter; First, Second, and Third John; and Jude. These letters are called "General" because they are addressed to general groups of people instead of particular ones. Here's an example of a general letter:
 
-"To Everyone living in Australia, please be kind to refugees."
+"To Everyone living in Australia, treat foreigners as well as you treat your own people and love them as much as you love yourself. Remember, you were once foreigners in the land of Egypt. I am the LORD your God."
 
 Here's an example of a particular letter:
 
-"To Everyone in East Vic Park Baptist Church, please remember to unplug the appliances."
+"To Everyone in East Vic Park Baptist Church, please remember to unplug the appliances, turn off the lights, turn off the water, and shut the doors when you leave. Also, please don't fiddle with the sound system or take food into the hall."
 
 Two of the seven General Letters are named after Peter, who was one of the first people to follow Jesus. Peter had no idea what it would mean when Jesus said "Follow me". He was a fisherman, but would become a pillar in a movement that has shaken the world. Tonight we will be looking at the first verse of the first chapter of the First Letter of Peter.
 
@@ -24,7 +24,7 @@ Jesus gave the first Christians a job -- Go and make disciples of all nations. I
 
 > We wanted the truth of the Good News to be safe with you for ever. Those who were regarded as of some importance -- whether they really were or not does not matter to me, for God does not judge by appearances -- had nothing further to suggest to me. On the contrary they saw that I had been entrusted with the Good News for the Gentiles, as Peter had been entrusted with it for the Jews. For God who enabled Peter to be an apostle to the Jews also enabled me to be an apostle to the Gentiles. So James, Cephas, and John, who are regarded as the pillars of the church, recognized the privilege which God had given me and shook hands with Barnabas and me as a pledge of partnership. We were to go to the Gentiles and they to the Jews. [Galatians 2.5-9]
 
-It looks like Jesus gave Peter the job of taking the Good News to the Jews. Peter's real name was Simon, but Jesus called him "rock". The Greek word for rock is πετρα, which is where the name Peter comes from. Cephas is the Aramaic word for rock. (Aramaic is like Hebrew, and is what the Jews in Israel spoke at the time.) So Peter was called Simon by his family, Peter by Greek-speaking Christians, and Cephas by Aramaic-speaking Christians.
+It looks like Jesus gave Peter the job of taking the Good News to the Jews. Peter's real name was Simon, but Jesus called him "rock". The Greek word for rock is πετρα, which is where the name Peter comes from. Cephas is the Aramaic word for rock. (Aramaic is like Hebrew, and is what the people of Israel spoke at the time.) So Peter was called Simon by his family, Peter by Greek-speaking Christians, and Cephas by Aramaic-speaking Christians.
 
 Why did Jesus call Simon "rock"? One time Jesus asked his disciples who people thought he was:
 
